# ridgeradar

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_expand_country_code.py  002_add_closing_and_results_tables.py  003_add_closing_and_results_tables.py
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/api/routes/: __init__.py  admin.py  analytics.py  competitions.py  config.py  health.py  hypotheses.py  markets.py  momentum.py  scores.py  shadow.py
app/config/: __init__.py  defaults.yaml  settings.py  shadow_trading.py
app/migrations/: env.py
app/migrations/versions/: 20260204_0001_initial_schema.py  20260204_0002_expand_country_code_add_competition_stats.py  20260205_0003_add_closing_and_results_tables.py  20260206_0004_add_trading_hypotheses.py  20260207_0005_add_ror_and_clv_mid.py
app/models/: __init__.py  base.py  domain.py
app/services/: __init__.py  hypothesis_engine.py  momentum.py
app/services/betfair_client/: __init__.py  api.py  auth.py  rate_limiter.py
app/services/ingestion/: __init__.py  discovery.py  snapshots.py
app/services/profiling/: __init__.py  metrics.py
app/services/scoring/: __init__.py  engine.py
app/tasks/: __init__.py  competition_stats.py  discovery.py  hypothesis.py  market_closure.py  profiling.py  results.py  scoring.py  shadow_trading.py  snapshots.py
app/ui/: __init__.py
app/ui/templates/: admin.html  analytics.html  base.html  competitions.html  dashboard.html  error.html  hypotheses.html  market_detail.html  movers.html  radar.html  shadow.html
docker/: Dockerfile
docs/: CORPORATE_DEPLOY_GUIDE.md  CORPORATE_STANDARDS.md  PHASE1_CLAUDE_CODE_PROMPT.md  PHASE1_TUNING_RECOMMENDATIONS.md  PHASE2_SHADOW_TRADING.md  USEFUL_COMMANDS.md  betfair_exchange_strategy.md
scripts/: analyse_high_scores.sql  bootstrap.sh  reset_db.sh
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_scoring.py  test_tier_classification.py
